Revert "- Fixed alignment on data view input fields"
This reverts commit 75c15d910d89436cbbcf9d6ed6683f423258716c.

--- a/RockWeb/Styles/_blocks-reporting.less
+++ b/RockWeb/Styles/_blocks-reporting.less
@@ -8,6 +8,7 @@
 */
 
 
+
 // 1. SQL Command
 // -------------------------
 
@@ -50,15 +51,6 @@
   .checkbox-inline {
     margin-top: 8px;
   }
-
-  @media @md {
-    // Vertically align criteria fields to the bottom
-    > div {
-      display: table-cell;
-      float: none;
-      vertical-align: bottom;
-    }
-  }
 }
 
 .filter-item div[class*="col"] {
@@ -86,8 +78,8 @@
 
 .list-panel {
   > .grid-filter {
-    padding: 6px 12px;
     margin: -15px -15px 15px -15px;
+    padding: 6px 12px;
 
     > header {
       position: relative;
